--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,8 +2,6 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  position: relative;
-  left: 0;
   min-width: 300px;
   max-width: 300px;
   min-height: calc(100vh - 100px);
